Imported from https://NiuYawei@github.com/NiuYawei/daos.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = DAOS Storage Engine
+[access "refs/*"]
+	owner = group user/Niu Yawei (NiuYawei)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Niu Yawei (NiuYawei)
+	label-Verified = -1..+1 group user/Niu Yawei (NiuYawei)
+	push = group user/Niu Yawei (NiuYawei)
+	read = group user/Niu Yawei (NiuYawei)
+	rebase = group user/Niu Yawei (NiuYawei)
+	removeReviewer = group user/Niu Yawei (NiuYawei)
+	submit = group user/Niu Yawei (NiuYawei)
+[access "refs/heads/*"]
+	create = group user/Niu Yawei (NiuYawei)
+	push = +force group user/Niu Yawei (NiuYawei)
+	pushMerge = group user/Niu Yawei (NiuYawei)
+	read = group user/Niu Yawei (NiuYawei)
+[access "refs/tags/*"]
+	push = group user/Niu Yawei (NiuYawei)
+	push = +force group user/Niu Yawei (NiuYawei)
